# incident_resolution_agent_AR_main

./: Dockerfile  README.md  docker_compose.yml  pyproject.toml
output/: log_analysis.json  resolution_report.json  root_cause_analysis_report.json  triage_report.json
src/incident_resolution_agent/: crew.py  main.py
src/incident_resolution_agent/config/: agents.yaml  tasks.yaml
tests/: test_config.py
