[project]
name = "incident_resolution_agent"
version = "0.1.0"
description = "Incident_Resolution_Agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7"
]

[project.scripts]
incident_resolution_agent = "incident_resolution_agent.main:run"
run_crew = "incident_resolution_agent.main:run"
train = "incident_resolution_agent.main:train"
replay = "incident_resolution_agent.main:replay"
test = "incident_resolution_agent.main:test"
run_with_trigger = "incident_resolution_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
